@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=org.gnome.KrbAuthDialog
+Exec=@BINDIR@/krb5-auth-dialog -A
