@@ -1,3 +1,9 @@
+Sa Mär 28 14:17:49 CET 2009 Guido Günther <agx@sigxcpu.org>
+
+	add dbus service file
+	* src/org.gnome.KrbAuthDialog.service.in: new file
+	* src/Makefile.am (service_DATA): process annd install service file
+
 Di Mär 24 00:04:50 CET 2009 Guido Günther <agx@sigxcpu.org>
 
 	monitor ccache via GFileMontor
